// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaderboard dropdown & toggle should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardDropdown
    activePage={0}
    initialScrollIndex={1}
    isShowingDropdown={false}
    leaderboards={
      Array [
        Object {
          "consent": true,
          "hasAccepted": true,
          "inviteFrom": "friend",
          "isLoading": false,
          "leaderboardId": "123456789123456789123456789000000",
          "name": "first leaderboard",
        },
      ]
    }
    onChangeActiveLeaderboard={[MockFunction]}
    onToggleDropdown={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ScrollViewMock
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "borderBottomColor": "rgb(255, 222, 219)",
              "borderBottomWidth": 1,
              "height": 96,
              "justifyContent": "center",
              "marginHorizontal": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(227,13,118)",
                "fontSize": 36,
                "lineHeight": 40,
              }
            }
          >
            first leaderboard
          </YuText>
        </TouchableOpacity>
      </ScrollViewMock>,
      "style": Array [
        Object {
          "backgroundColor": "rgb(255, 252, 221)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "transform": Array [
            Object {
              "translateY": -1334,
            },
          ],
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>
          </TouchableOpacity>,
        ],
        "style": Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "123456789123456789123456789000000",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>,
            "onPress": [Function],
            "style": Object {
              "borderBottomColor": "rgb(255, 222, 219)",
              "borderBottomWidth": 1,
              "height": 96,
              "justifyContent": "center",
              "marginHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "first leaderboard",
              "style": Object {
                "color": "rgb(227,13,118)",
                "fontSize": 36,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": "first leaderboard",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [MockFunction],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ScrollViewMock
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>
          </TouchableOpacity>
        </ScrollViewMock>,
        "style": Array [
          Object {
            "backgroundColor": "rgb(255, 252, 221)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "transform": Array [
              Object {
                "translateY": -1334,
              },
            ],
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "borderBottomColor": "rgb(255, 222, 219)",
                  "borderBottomWidth": 1,
                  "height": 96,
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(227,13,118)",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                first leaderboard
              </YuText>
            </TouchableOpacity>,
          ],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "123456789123456789123456789000000",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(227,13,118)",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                first leaderboard
              </YuText>,
              "onPress": [Function],
              "style": Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "first leaderboard",
                "style": Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": "first leaderboard",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard dropdown & toggle should render default values 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardToggle
    activePage={0}
    isShowingDropdown={false}
    leaderboards={
      Array [
        Object {
          "consent": true,
          "hasAccepted": true,
          "inviteFrom": "friend",
          "isLoading": false,
          "leaderboardId": "123456789123456789123456789000000",
          "name": "first leaderboard",
        },
      ]
    }
    onToggleDropdown={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        onPress={[MockFunction]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
          }
        }
      >
        <YuText
          style={
            Object {
              "fontSize": 18,
              "lineHeight": 20,
              "paddingHorizontal": 30,
              "textAlign": "center",
            }
          }
        >
          first leaderboard
        </YuText>
        <Image
          source={1}
        />
      </TouchableOpacity>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "height": 50,
        "justifyContent": "center",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <YuText
            style={
              Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              }
            }
          >
            first leaderboard
          </YuText>,
          <Image
            source={1}
          />,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "first leaderboard",
            "style": Object {
              "fontSize": 18,
              "lineHeight": 20,
              "paddingHorizontal": 30,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "first leaderboard",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              }
            }
          >
            first leaderboard
          </YuText>
          <Image
            source={1}
          />
        </TouchableOpacity>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "height": 50,
          "justifyContent": "center",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 18,
                  "lineHeight": 20,
                  "paddingHorizontal": 30,
                  "textAlign": "center",
                }
              }
            >
              first leaderboard
            </YuText>,
            <Image
              source={1}
            />,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "first leaderboard",
              "style": Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "first leaderboard",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard dropdown & toggle should render dropdown & show caret-up toggle 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardDropdown
    activePage={0}
    initialScrollIndex={1}
    isShowingDropdown={true}
    leaderboards={
      Array [
        Object {
          "consent": true,
          "hasAccepted": true,
          "inviteFrom": "friend",
          "isLoading": false,
          "leaderboardId": "123456789123456789123456789000000",
          "name": "first leaderboard",
        },
      ]
    }
    onChangeActiveLeaderboard={[MockFunction]}
    onToggleDropdown={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ScrollViewMock
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "borderBottomColor": "rgb(255, 222, 219)",
              "borderBottomWidth": 1,
              "height": 96,
              "justifyContent": "center",
              "marginHorizontal": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(227,13,118)",
                "fontSize": 36,
                "lineHeight": 40,
              }
            }
          >
            first leaderboard
          </YuText>
        </TouchableOpacity>
      </ScrollViewMock>,
      "style": Array [
        Object {
          "backgroundColor": "rgb(255, 252, 221)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "transform": Array [
            Object {
              "translateY": -1334,
            },
          ],
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>
          </TouchableOpacity>,
        ],
        "style": Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "123456789123456789123456789000000",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>,
            "onPress": [Function],
            "style": Object {
              "borderBottomColor": "rgb(255, 222, 219)",
              "borderBottomWidth": 1,
              "height": 96,
              "justifyContent": "center",
              "marginHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "first leaderboard",
              "style": Object {
                "color": "rgb(227,13,118)",
                "fontSize": 36,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": "first leaderboard",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [MockFunction],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ScrollViewMock
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>
          </TouchableOpacity>
        </ScrollViewMock>,
        "style": Array [
          Object {
            "backgroundColor": "rgb(255, 252, 221)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "transform": Array [
              Object {
                "translateY": -1334,
              },
            ],
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "borderBottomColor": "rgb(255, 222, 219)",
                  "borderBottomWidth": 1,
                  "height": 96,
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(227,13,118)",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                first leaderboard
              </YuText>
            </TouchableOpacity>,
          ],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "123456789123456789123456789000000",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(227,13,118)",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                first leaderboard
              </YuText>,
              "onPress": [Function],
              "style": Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "first leaderboard",
                "style": Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": "first leaderboard",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard dropdown & toggle should render dropdown & show caret-up toggle 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardToggle
    activePage={0}
    isShowingDropdown={true}
    leaderboards={
      Array [
        Object {
          "consent": true,
          "hasAccepted": true,
          "inviteFrom": "friend",
          "isLoading": false,
          "leaderboardId": "123456789123456789123456789000000",
          "name": "first leaderboard",
        },
      ]
    }
    onToggleDropdown={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        onPress={[MockFunction]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
          }
        }
      >
        <YuText
          style={
            Object {
              "fontSize": 18,
              "lineHeight": 20,
              "paddingHorizontal": 30,
              "textAlign": "center",
            }
          }
        >
          first leaderboard
        </YuText>
        <Image
          source={1}
        />
      </TouchableOpacity>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "height": 50,
        "justifyContent": "center",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <YuText
            style={
              Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              }
            }
          >
            first leaderboard
          </YuText>,
          <Image
            source={1}
          />,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "first leaderboard",
            "style": Object {
              "fontSize": 18,
              "lineHeight": 20,
              "paddingHorizontal": 30,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "first leaderboard",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              }
            }
          >
            first leaderboard
          </YuText>
          <Image
            source={1}
          />
        </TouchableOpacity>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "height": 50,
          "justifyContent": "center",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 18,
                  "lineHeight": 20,
                  "paddingHorizontal": 30,
                  "textAlign": "center",
                }
              }
            >
              first leaderboard
            </YuText>,
            <Image
              source={1}
            />,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "first leaderboard",
              "style": Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "first leaderboard",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard dropdown & toggle should simulate toggle onPress & update prop  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardDropdown
    activePage={0}
    initialScrollIndex={1}
    isShowingDropdown={false}
    leaderboards={
      Array [
        Object {
          "consent": true,
          "hasAccepted": true,
          "inviteFrom": "friend",
          "isLoading": false,
          "leaderboardId": "123456789123456789123456789000000",
          "name": "first leaderboard",
        },
      ]
    }
    onChangeActiveLeaderboard={[MockFunction]}
    onToggleDropdown={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ScrollViewMock
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "borderBottomColor": "rgb(255, 222, 219)",
              "borderBottomWidth": 1,
              "height": 96,
              "justifyContent": "center",
              "marginHorizontal": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(227,13,118)",
                "fontSize": 36,
                "lineHeight": 40,
              }
            }
          >
            first leaderboard
          </YuText>
        </TouchableOpacity>
      </ScrollViewMock>,
      "style": Array [
        Object {
          "backgroundColor": "rgb(255, 252, 221)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "transform": Array [
            Object {
              "translateY": -1334,
            },
          ],
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>
          </TouchableOpacity>,
        ],
        "style": Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "123456789123456789123456789000000",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>,
            "onPress": [Function],
            "style": Object {
              "borderBottomColor": "rgb(255, 222, 219)",
              "borderBottomWidth": 1,
              "height": 96,
              "justifyContent": "center",
              "marginHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "first leaderboard",
              "style": Object {
                "color": "rgb(227,13,118)",
                "fontSize": 36,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": "first leaderboard",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [MockFunction],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ScrollViewMock
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                }
              }
            >
              first leaderboard
            </YuText>
          </TouchableOpacity>
        </ScrollViewMock>,
        "style": Array [
          Object {
            "backgroundColor": "rgb(255, 252, 221)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "transform": Array [
              Object {
                "translateY": -1334,
              },
            ],
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "borderBottomColor": "rgb(255, 222, 219)",
                  "borderBottomWidth": 1,
                  "height": 96,
                  "justifyContent": "center",
                  "marginHorizontal": 30,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "rgb(227,13,118)",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                first leaderboard
              </YuText>
            </TouchableOpacity>,
          ],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "123456789123456789123456789000000",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <YuText
                style={
                  Object {
                    "color": "rgb(227,13,118)",
                    "fontSize": 36,
                    "lineHeight": 40,
                  }
                }
              >
                first leaderboard
              </YuText>,
              "onPress": [Function],
              "style": Object {
                "borderBottomColor": "rgb(255, 222, 219)",
                "borderBottomWidth": 1,
                "height": 96,
                "justifyContent": "center",
                "marginHorizontal": 30,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "first leaderboard",
                "style": Object {
                  "color": "rgb(227,13,118)",
                  "fontSize": 36,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": "first leaderboard",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [MockFunction],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Leaderboard dropdown & toggle should simulate toggle onPress & update prop  2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardToggle
    activePage={0}
    isShowingDropdown={false}
    leaderboards={
      Array [
        Object {
          "consent": true,
          "hasAccepted": true,
          "inviteFrom": "friend",
          "isLoading": false,
          "leaderboardId": "123456789123456789123456789000000",
          "name": "first leaderboard",
        },
      ]
    }
    onToggleDropdown={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        onPress={[MockFunction]}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
          }
        }
      >
        <YuText
          style={
            Object {
              "fontSize": 18,
              "lineHeight": 20,
              "paddingHorizontal": 30,
              "textAlign": "center",
            }
          }
        >
          first leaderboard
        </YuText>
        <Image
          source={1}
        />
      </TouchableOpacity>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "height": 50,
        "justifyContent": "center",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <YuText
            style={
              Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              }
            }
          >
            first leaderboard
          </YuText>,
          <Image
            source={1}
          />,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "first leaderboard",
            "style": Object {
              "fontSize": 18,
              "lineHeight": 20,
              "paddingHorizontal": 30,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "first leaderboard",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 30,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              }
            }
          >
            first leaderboard
          </YuText>
          <Image
            source={1}
          />
        </TouchableOpacity>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "height": 50,
          "justifyContent": "center",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <YuText
              style={
                Object {
                  "fontSize": 18,
                  "lineHeight": 20,
                  "paddingHorizontal": 30,
                  "textAlign": "center",
                }
              }
            >
              first leaderboard
            </YuText>,
            <Image
              source={1}
            />,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "first leaderboard",
              "style": Object {
                "fontSize": 18,
                "lineHeight": 20,
                "paddingHorizontal": 30,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "first leaderboard",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
